application/ingress.yaml
apiVersion: install.tetrate.io/v1alpha1
kind: Gateway
metadata:
  name: gateway
spec:
  kubeSpec:
    service:
      type: LoadBalancer
